new layout of app

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <a class="storyPast" onclick="MoveOn('firstpage')">Úvod</a>
                 <a id="moCemMluvime" onclick="MoveOn('oCemMluvime')">O čem mluvíme?</a>
                 <a id="mzJakychDat" onclick="MoveOn('zJakychDat')">Z jakých dat vycházíme?</a>
+                <a id="InteraktivniAplikace" onclick="MoveOn('app')">Interaktivní aplikace</a>
             </div>
         </div>
 
