predatori a mistni modals

--- a/index.html
+++ b/index.html
@@ -97,6 +97,29 @@
                 <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
             </div>
         </div>
+
+        <div id="modPredatori" class="modal">
+            <div class="close" onclick="hideModal()"><img src="closeIcon3.svg" /></div>
+            <div class="modalBody">
+                <h3>Predátorské časopisy</h3>
+                <p>Tzv. predátorské časopisy zneužívají placený open-access přístup k publikaci vědy a akademikům za poplatek nabízí publikaci článků bez pořádného recenzního řízení. Tyto časopisy mají k profesionalitě velmi daleko a pro akademiky by měly představovat jakousi “no-go zónu“. Spíše než kariérní postup by po publikaci v těchto časopisech měla následovat ostuda. Pokud se na dané instituci v takových časopisech publikuje v masovém měřítku, je zjevné, že hodnocení vědy v této instituci selhává.</p>
+                <p>Seznam predátorských časopisů vychází ze slavného blogu Jeffrey Bealla (verze z dubna 2016) a původně byl zpracován ve studii IDEA Predátorské časopisy ve Scopusu, kde je také popsán podrobný způsob jeho získání.  Seznam predátorských časopisů použitý v této studii je k dispozici <a>zde</a>.</p> 
+                <p>Beallovy seznamy jsou často kritizovány za přílišnou subjektivitu – rozhodnutí o zařazení časopisu často není výsledkem rigidní analýzy, ale osobním názorem jednoho knihovníka v Coloradu, které není podloženo solidními, porovnatelnými a ověřenými daty. S touto kritikou lze jen souhlasit, a proto vznikla studie IDEA Pod pokličkou Beallova seznamu. Podle ní výrazná většina časopisů na Beallově seznamu pro akademickou komunitu skutečně příliš relevantní není, ale existují výjimky jako vydavatelství Frontiers. Jejich zařazení v akademické obci vyvolalo vlnu nevole a tak jejich časopisy nebyly pro potřeby této studie zařazeny jako predátorské. </p>
+                <!-- TODO PRIDAT SEZNAM PREDATORSKYCH CASOPISU!!!! -->
+            </div>
+        </div>
+
+        <div id="modMistni" class="modal">
+            <div class="close" onclick="hideModal()"><img src="closeIcon3.svg" /></div>
+            <div class="modalBody">
+                <h3>Místní časopisy</h3>
+                <p>Vědecké časopisy jsou vydávány proto, aby usnadnily sdílení vědeckých výsledků. Jejich cílem by tak mělo být rozšiřovat své výsledky mezi nejširší okruh čtenářů. Místním časopisům se tyto cíle naplňovat nedaří a podezřele často publikují články od autorů úzkého okruhu. Pokud do časopisu mezinárodní autoři nepřispívají, s nejvyšší pravděpodobností ho ani nečtou – a to ani v případě, že je publikován v angličtině. Instituce, jejichž autoři ve velkém publikují v místních časopisech, tak selhávají ve snaze svůj výzkum předávat co nejširšímu publiku.</p>
+                <p>Za místní časopisy považujeme všechny časopisy ve Scopusu, u nichž alespoň třetina článků (typ Articles) má alespoň jednoho z autorů České republiky nebo ze Slovenska. Seznam těchto časopisů je k dispozici zde.</p>
+                <p>Pravidlo, že špičkový výzkum by měl být mezinárodní, podle nás platí s výjimkou humanitních oborů. Českou historii, český jazyk a další lokálně zaměřené otázky mohou samozřejmě být legitimně studovány skrze lokální výzkumníky. Nicméně jsme přesvědčeni, že ve většině společenských věd již toto pravidlo neplatí. Drtivá většina ekonomických, společenských, ale i právních otázek jsou relevantní nejen pro české akademické publikum, ale také pro publikum světové a příslušní výzkumníci by se měly vztahovat zejména k akademickému diskurzu probíhajícím v zahraničí.</p>
+                <p>Je dobré mít na paměti malou metodologickou chybu. Články, které vznikly při spolupráci mezi českými a slovenskými vědci, jsou při výpočtu započítány několikrát. Časopisy, které často publikují česko-slovenské spolupráce tak mohou působit jako místněji zaměřené než reálně jsou. Je ale jen těžko představitelné, že by tento problém vedl ke zcela odlišnému výsledku místního zaměření instituce. </p>
+            </div>
+        </div>
+
             <!-- <div class="modalFooter">
 
             </div> -->
