adding modals related to chart

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <div id="content">
             <div id="firstpage" class="slide" style="border-bottom: none;" onload="">
                 <div id="headers">
-                    <h1 id="title">Institucionální hodnocení dle IDEA</h1>
+                    <h1 id="title">Jiný název než Institucionální hodnocení dle IDEA</h1>
                     <h2 id="subtitle">Kdo je kdo v institucionálním hodnocení?</h2>
                     <a href="https://idea.cerge-ei.cz/" target="_blank"><img src="IDEA.png" class="logo"/></a>
                     <a href="http://av21.avcr.cz/" target="_blank" ><img src="justStrategyWhite.png" class="logo"/></a>
@@ -103,7 +103,7 @@
             <div class="modalBody">
                 <h3>Predátorské časopisy</h3>
                 <p>Tzv. predátorské časopisy zneužívají placený open-access přístup k publikaci vědy a akademikům za poplatek nabízí publikaci článků bez pořádného recenzního řízení. Tyto časopisy mají k profesionalitě velmi daleko a pro akademiky by měly představovat jakousi “no-go zónu“. Spíše než kariérní postup by po publikaci v těchto časopisech měla následovat ostuda. Pokud se na dané instituci v takových časopisech publikuje v masovém měřítku, je zjevné, že hodnocení vědy v této instituci selhává.</p>
-                <p>Seznam predátorských časopisů vychází ze slavného blogu Jeffrey Bealla (verze z dubna 2016) a původně byl zpracován ve studii IDEA Predátorské časopisy ve Scopusu, kde je také popsán podrobný způsob jeho získání.  Seznam predátorských časopisů použitý v této studii je k dispozici <a>zde</a>.</p> 
+                <p>Seznam predátorských časopisů vychází ze slavného blogu Jeffrey Bealla (verze z dubna 2016) a původně byl zpracován ve studii IDEA <a href="https://idea.cerge-ei.cz/zpravy/predatorske-casopisy-ve-scopusu" target="_blank">Predátorské časopisy ve Scopusu</a>, kde je také popsán podrobný způsob jeho získání.  Seznam predátorských časopisů použitý v této studii je k dispozici <a>zde</a>.</p> 
                 <p>Beallovy seznamy jsou často kritizovány za přílišnou subjektivitu – rozhodnutí o zařazení časopisu často není výsledkem rigidní analýzy, ale osobním názorem jednoho knihovníka v Coloradu, které není podloženo solidními, porovnatelnými a ověřenými daty. S touto kritikou lze jen souhlasit, a proto vznikla studie IDEA Pod pokličkou Beallova seznamu. Podle ní výrazná většina časopisů na Beallově seznamu pro akademickou komunitu skutečně příliš relevantní není, ale existují výjimky jako vydavatelství Frontiers. Jejich zařazení v akademické obci vyvolalo vlnu nevole a tak jejich časopisy nebyly pro potřeby této studie zařazeny jako predátorské. </p>
                 <!-- TODO PRIDAT SEZNAM PREDATORSKYCH CASOPISU!!!! -->
             </div>
@@ -119,10 +119,15 @@
                 <p>Je dobré mít na paměti malou metodologickou chybu. Články, které vznikly při spolupráci mezi českými a slovenskými vědci, jsou při výpočtu započítány několikrát. Časopisy, které často publikují česko-slovenské spolupráce tak mohou působit jako místněji zaměřené než reálně jsou. Je ale jen těžko představitelné, že by tento problém vedl ke zcela odlišnému výsledku místního zaměření instituce. </p>
             </div>
         </div>
-
-            <!-- <div class="modalFooter">
-
-            </div> -->
+        <div id="modPracoviste" class="modal">
+            <div class="close" onclick="hideModal()"><img src="closeIcon3.svg" /></div>
+            <div class="modalBody">
+                <h3>Pracoviště a organizace</h3>
+                <p>Rozlišujeme mezi dvěma druhy institucí výzkumu a vývoje - podrobnějšími <i>pracovišti</i> a obecnějšími <i>organizacemi</i>.</p>
+                <p><strong>Pracoviště</strong> je nejnižší jednotka, která je reportována do RIV. V případě vysokých škol jde nejčastěji o fakulty, v případě Akademie věd o jednotlivé ústavy. Na této úrovni jsou často také jednotlivé soukromé firmy či státní instituce.</p>
+                <p><strong>Organizace</strong> je naopak zastřešující institucí - např. univerzita nebo Akademie věd. V případě soukromých firem jde nejčastěji o poskytovatele dotační podpory, tedy často ministerstva a další. </p>
+            </div>
+        </div>
     </div>
    </body>
    <script type="text/javascript" src="script.js"></script>
