--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
                     <p><a class="modalLink" onclick="showModal('modKafemlejnek')">Kafemlejnek</a> napáchal v některých oborech velké škody, ale nová <a class="modalLink" onclick="showModal('modMetodika2017')">Metodika 2017+</a> se pouze pomalu rozbíhá. Navíc jsou zásadní problémy, kterými se i nový systém hodnocení řeší jen okrajově.</p>
                     <p>Nabízíme netradiční pohled. Namísto řazení časopisů podle citačního ohlasu vycházíme ze seznamů časopisů podezřelých z neférových praktik (tzv. <a class="modalLink" onclick="showModal('modPredatori')">predátorské</a> časopisy) a z rozložení jejich autorské základny (<a class="modalLink" onclick="showModal('modMistni')">místní</a> časopisy).</p>
                     <p>Poskytujeme další střípek do mozaiky toho, kdo u nás dělá jaký výzkum. Pozice dané fakulty či ústavu by měla zajímat nejen manažery výzkumu a tvůrce politik, ale i jejich zaměstnance a potažmo studenty. </p>
-                    <p>Navazujeme na <a class="modalLink" onclick="showModal('modPrevious')" >předchozí IDEA studie</a> na tato témata.</p>    
-                </div>
+                    <p>Navazujeme na <a class="modalLink" onclick="showModal('modPrevious')" >předchozí IDEA studie</a> na tato témata.</p>
+                    <br />
+                    <br />    
+                <!-- </div>
             </div>
             <div id="zJakychDat" class="flow">
-                <div class="content">
+                <div class="content"> -->
                     <h3>Z jakých dat vycházíme?</h3>
                     <p>Hlavním zdrojem informací jsou vědecké články, které instituce nahlásily do systému RIV. Na jejich základě pak tyto instituce získaly část svých prostředků z veřejného rozpočtu a tudíž by měly obsahovat to nejlepší, co na dané instituci vzniklo. </p>
                     <p>Data o mezinárodní orientaci jednotlivých časopisů pochází z bibliometrické databáze Scopus a seznam predátorských časopisů čerpáme z naší předchozí studie na toto téma. </p>
