--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             </div>
             <div id="empty-intro" class="fixempty full90h"></div>
             <div id="menu" class="floaty">
+                <a class="corner" href="https://idea.cerge-ei.cz/" target="_blank" style="left:10px;"><img src="img/IDEA2.png"/></a>
                 <div class="content">
                     <center>
                         <a class="storyPast" onclick="MoveOn('empty-intro')">Úvod</a>
@@ -58,6 +59,8 @@
                         <a id="mConclusion" onclick="MoveOn('conclusion')">Závěrem</a>
                     </center>
                 </div>
+                <a class="corner" href="http://av21.avcr.cz/" target="_blank" style="right: 10px;"><img src="img/justStrategyWhite.png" /></a>
+
             </div>
             <div id="menuempty"></div>
             <div id="oCemMluvime" class="flow">
