--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 ﻿<html>
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119824152-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+        
+            gtag('config', 'UA-119824152-1');
+        </script>
+            
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0" >
         <title>Kdo nejvíce publikuje v predátorských a místních časopisech?</title>
@@ -324,6 +333,7 @@
 </div>
 
     </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
 
 
 </html>
