--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div id="modPredPrax" class="modal">
                 <div class="modalBody">
                     <h3>Predátorské praktiky</h3>
-                    <p>Mezi nestandardní redakční praktiky rádoby vědeckých časopisů, které Jeffrey Beall používal jako kritéria pro zařazení na jeho „černé“ listiny predátorů, patří zejména publikace článku za úplatu bez řádného recenzního řízení, ale také mimo jiné slibování velmi rychlé publikace, zastřená identita či umístění vydavatele, uvádění fiktivních členů redakční rady, neřešené problémy s plagiarismem, porušováním copyrightu a publikování pochybných výsledků, název i design webových stránek nápadně podobný zavedeným časopisům, název odkazující na nepravdivou zemi původu, zveřejňování zavádějících údajů o indexaci v citačních databázích a přiděleném impakt faktoru, chvástání se smyšleným renomé anebo agresivní marketing skrze rozesílání nevyžádané pošty.</p>
+                    <p>Mezi nestandardní redakční praktiky rádoby vědeckých časopisů, které <a href="https://beallslist.weebly.com/uploads/3/0/9/5/30958339/criteria-2015.pdf" target="_blank">Jeffrey Beall používal jako kritéria</a> pro zařazení na jeho „černé“ listiny predátorů, patří zejména publikace článku za úplatu bez řádného recenzního řízení, ale také mimo jiné slibování velmi rychlé publikace, zastřená identita či umístění vydavatele, uvádění fiktivních členů redakční rady, neřešené problémy s plagiarismem, porušováním copyrightu a publikování pochybných výsledků, název i design webových stránek nápadně podobný zavedeným časopisům, název odkazující na nepravdivou zemi původu, zveřejňování zavádějících údajů o indexaci v citačních databázích a přiděleném impakt faktoru, chvástání se smyšleným renomé anebo agresivní marketing skrze rozesílání nevyžádané pošty.</p>
                     <center><a onclick="hideModal()" class="button buttonActive">Skrýt</a></center>
 
                 </div>
@@ -293,7 +293,7 @@
                     <p>2. 5. 2017 – Seminář „<a href="https://www.youtube.com/watch?v=ukWEJA__FKM" target="_blank">Pod pokličkou Beallových seznamů</a>“</p>
                     <p>16. 11. 2016 - Seminář „<a href="https://www.youtube.com/watch?v=rvo3QHuvRCg" target="_blank">Predátorské časopisy ve Scopusu: Nová fakta v celosvětovém srovnání"</a>“</p>
                     <br />
-                    <p>Na stránkách <a href="" target="_blank" >think-tanku IDEA</a> najdete i mnoho dalších nejen bibliometrických studií. </p>
+                    <p>Na stránkách <a href="https://idea.cerge-ei.cz/" target="_blank" >think-tanku IDEA</a> najdete i mnoho dalších nejen bibliometrických studií. </p>
                     <center><a onclick="hideModal()" class="button buttonActive">Skrýt</a></center>
                 </div>
             </div>
